--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -163,7 +163,7 @@
                           </figcaption>
                         </figure>
                       </a>
-                      <a href="static/img/gallery-img-02.jpg">
+                      <a href="static/img/buspass.png">
                         <figure class="effect-honey tm-gallery-item">
                           <img src="static/img/buspass.png" alt="Image" class="img-fluid" width="728" height="724">
                           <figcaption>
@@ -219,17 +219,18 @@
             </div>
             
             <div class="col-sm-12 col-md-6 d-flex align-items-center tm-contact-item">
-              <a href="tel:+91 1234567890" class="tm-contact-item-link">
+              <a href="tel:+91 9841750806" class="tm-contact-item-link">
                   <i class="fas fa-3x fa-phone mr-4"></i>
-                  <span class="mb-0"><strong>+91 1234567890</strong></span>
+                  <span class="mb-0"><strong>Call Us</strong></span>
               </a>              
             </div>
             <div class="col-sm-12 col-md-6 d-flex align-items-center tm-contact-item">
-              <a href="buspassbooking@gmail.com" class="tm-contact-item-link">
+              <a href="mailto:alwinkumar2002@gmail.com" class="tm-contact-item-link">
                   <i class="fas fa-3x fa-envelope mr-4"></i>
                   <span class="mb-0"><strong>buspassbooking@gmail.com</strong></span>
               </a>              
-            </div>
+          </div>
+          
             <div class="col-sm-12 col-md-6 d-flex align-items-center tm-contact-item">
               <a href="https://www.google.com/maps" class="tm-contact-item-link">
                   <i class="fas fa-3x fa-map-marker-alt mr-4"></i>
